src/test/ui/parser/pat-tuple-5.stderr
error: unexpected token: `)`
  --> $DIR/pat-tuple-5.rs:3:14
   |
LL |         (pat ..) => {} //~ ERROR unexpected token: `)`
   |              ^^

error: aborting due to previous error

